# acc-telemetry-rs

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md
.opencode/agents/: racing_telemetry.md
.opencode/plans/: LAP_DETECTION_REFACTOR.md
recordings/: ks_brands_hatch_ks_mazda_mx5_cup_2026-03-02_154603. json  ks_brands_hatch_ks_mazda_mx5_cup_2026-03-02_161732.json  rt_oulton_park_ks_ford_escort_mk1_2026-03-02_165936.json
recordings/normalized_car_location_logs/: 260302-193414.json  rt_oulton_park_ks_ford_escort_mk1_2026-03-02_185008.json  rt_oulton_park_ks_ford_escort_mk1_2026-03-02_193400.json  rt_oulton_park_ks_ford_escort_mk1_2026-03-03_000340.json  rt_oulton_park_ks_ford_escort_mk1_2026-03-03_002714.json  rt_oulton_park_ks_ford_escort_mk1_2026-03-03_191357.json  rt_oulton_park_ks_ford_escort_mk1_2026-03-03_194820.json
src/: debug_logger.rs  json_export.rs  lap_recorder.rs  main.rs  shared_memory.rs
