[package]
name = "acc-telemetry-rs"
version = "0.1.0"
edition = "2021"
description = "Assetto Corsa Competizione shared memory telemetry reader"

# This is a Windows-only application; it uses the Windows named shared memory API.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3
lto = true
